--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
+Authlib==1.3.2
 bcrypt==4.0.1
 blinker==1.6.2
 certifi==2021.10.8
+cffi==1.17.1
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.6
+cryptography==43.0.1
 dnspython==2.3.0
 docutils==0.18.1
 dominate==2.9.0
 email-validator==1.3.1
+Faker==33.1.0
 Flask==2.3.3
 Flask-Bootstrap==3.3.7.1
 Flask-Colorpicker==0.9
@@ -19,20 +23,33 @@ greenlet==2.0.2
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonify==0.5
+Kivy==2.1.0
+Kivy-Garden==0.1.5
+kivymd==0.104.2
 MarkupSafe==2.1.2
 mysql-connector-python==8.1.0
 mysql-connector-python-rf==2.2.2
+mysqlclient==2.2.4
 Pillow==10.0.1
 protobuf==4.21.12
 pyasn1==0.5.0
+pycparser==2.22
+PyMySQL==1.1.1
+pyodbc==5.1.0
+python-dateutil==2.9.0.post0
+requests==2.32.3
 rsa==4.9
+six==1.17.0
 SQLAlchemy==2.0.22
 svgwrite==1.4.3
 Tree==0.2.4
 typing_extensions==4.5.0
+ua-parser==1.0.0
+ua-parser-builtins==0.18.0
+urllib3==2.2.3
+user-agents==2.2.0
 visitor==0.1.3
 Werkzeug==2.3.7
-WTForms==3.0.1
+WTForms==3.2.1
 zipp==3.15.0
-gunicorn
-flask-bcrypt
